--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,13 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
+        cache: 'pip'
     
     - name: Install dependencies
       working-directory: ./Memotag
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install --only-binary :all: -r requirements.txt
     
     - name: Generate static site
       working-directory: ./Memotag
