--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,5 +54,4 @@ jobs:
       uses: actions/deploy-pages@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        branch: gh-pages
-        folder: ./Memotag/docs
+        artifact_name: github-pages
